update campo-ui and fix drawer / appbar z-index

--- a/app/webpacker/stylesheets/index.scss
+++ b/app/webpacker/stylesheets/index.scss
@@ -16,23 +16,7 @@
 }
 
 .app-bar {
-  z-index: 20;
   padding: 0;
-}
-
-.drawer-wrapper {
-}
-
-.drawer {
-  z-index: 10;
-}
-
-.drawer--modal {
-  z-index: 100;
-}
-
-.dialog--open {
-  z-index: 20;
 }
 
 .toolbar {
@@ -50,8 +34,6 @@
 }
 
 .app-content {
-  flex-grow: 1;
-  overflow: auto;
   position: relative;
 }
 
